--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 @charset "UTF-8";
 
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;
-
-400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;
+
+400;700&family=Roboto&display=swap");
 input[type=text],
 input[type=email],
 input[type=tel],
@@ -152,7 +153,7 @@ h6 {
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 .btn {
